// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputSelect input select element Can be customised via props named "css". 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="inputBox-0-2-2"
    style={
      Object {
        "background": "red",
      }
    }
  >
    <select
      className="select-0-2-4"
      id="coins"
      onChange={[Function]}
      value="one"
    >
      <option
        className="option-0-2-5"
        value="one"
      >
        one
      </option>
      <option
        className="option-0-2-5"
        value="two"
      >
        two
      </option>
      <option
        className="option-0-2-5"
        value="three"
      >
        three
      </option>
    </select>
  </div>
</div>
`;

exports[`InputSelect input select element Customized via SoraTheme matches snapshot 1`] = `
<div
  className="container-0-2-6"
>
  <div
    className="inputBox-0-2-7"
  >
    <select
      className="select-0-2-9"
      id="coins"
      onChange={[Function]}
      value="a"
    >
      <option
        className="option-0-2-10"
        value="a"
      >
        a
      </option>
      <option
        className="option-0-2-10"
        value="b"
      >
        b
      </option>
    </select>
  </div>
</div>
`;

exports[`InputSelect input select element Default component matches snapshot. 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="inputBox-0-2-2"
  >
    <select
      className="select-0-2-4"
      id="coins"
      onChange={[Function]}
      value="test"
    >
      <option
        className="option-0-2-5"
        value="test"
      >
        test
      </option>
      <option
        className="option-0-2-5"
        value="snapshot"
      >
        snapshot
      </option>
    </select>
  </div>
</div>
`;
